--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,9 @@
     "start:dev": "nodemon app.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fkill": "^7.2.1",
     "node-schedule": "^2.0.0",
     "os-utils": "^0.0.14",
     "pidusage": "^2.0.21",
